# Project_Themis

./: .gitignore  .gitmodules  CMakeLists.txt  CREDITS  README.md  build.conf  confgen.py
Documents/: BugReportTemplate.md  FormattingRules.md  GenericIssueTemplate.md  HowToContribute.md  RequestTemplate.md  RequirementsForDevelopment.md
cmake/: themis_custom_functions.cmake
components/dbus/: CMakeLists.txt
components/dbus/include/: dbus.hh  listenerThread.hh  senderThread.hh
components/dbus/src/: dbus.cpp  listenerThread.cpp  senderThread.cpp
components/http/: CMakeLists.txt
components/http/include/: HttpThread.hh
components/http/src/: HttpThread.cpp
components/misc/: CMakeLists.txt
components/misc/include/: Definitions.hh  ErrorMessageHandlers.hh  Flag.hh
components/thread/: CMakeLists.txt
components/thread/include/: thread.hh
components/thread/src/: thread.cpp
debian/: changelog.in  control  copyright  rules  themis.1  themis.lintian-overrides  themis.manpages  themis.postrm  themis.service
main/: CMakeLists.txt  helpers.hh  httpHandlers.hh  init.hh  main.cpp
plugins/apache/: CMakeLists.txt  build.conf  ui.json
plugins/apache/include/: apache_functions.hh
plugins/apache/src/: apache_functions.cpp  main.cpp
plugins/example/: CMakeLists.txt  build.conf  ui.json
plugins/example/include/: functions.hh
plugins/example/src/: functions.cpp  main.cpp
plugins/firewalld/: CMakeLists.txt  build.conf  ui.json
plugins/firewalld/include/: functions.hh
plugins/firewalld/src/: functions.cpp  main.cpp
plugins/remote_access_tool_plugin/: CMakeLists.txt  README.md  build.conf  ui.json
plugins/remote_access_tool_plugin/client_agent/: CMakeLists.txt
plugins/remote_access_tool_plugin/client_agent/src/: main.cpp
plugins/remote_access_tool_plugin/include/: RemoteController.hpp  RulesManager.hpp  functions.hh
plugins/remote_access_tool_plugin/meta/: conf_type.json  dbus_cred.json  ratConfig.json
plugins/remote_access_tool_plugin/meta/ui/: ui.json
plugins/remote_access_tool_plugin/src/: RemoteController.cpp  TCPHandler.cpp  functions.cpp  rat_server_main.cpp
rules/: themis.apache.rule.csv  themis.example.rule.csv  themis.firewalld.rule.csv  themis.main.rule.csv  themis.remote_access_tool.rule.csv
scripts/: build-apt-repo.sh  deb_service_gen.sh
templates/: org.themis.ApachePlugin.conf  org.themis.ExamplePlugin.conf  org.themis.FirewalldPlugin.conf  org.themis.ProjectThemis.conf  org.themis.RatPlugin.conf
themis_cli/: pubspec.yaml
themis_gui/: README.md  pubspec.yaml
themis_gui/android/app/: build.gradle.kts
themis_gui/android/app/src/main/: AndroidManifest.xml
themis_gui/android/app/src/main/kotlin/com/example/themis_gui/: MainActivity.kt
themis_gui/assets/google_fonts/: OFL.txt
themis_gui/docs/: themis_ui_items.json
themis_gui/ios/Runner/: Info.plist
themis_gui/ios/Runner.xcodeproj/: project.pbxproj
themis_gui/lib/: main.dart
themis_gui/lib/core/misc/: constants.dart  extensions.dart  hydrated_encryption.dart  print_success.dart  router.dart  test_item.dart  theme_transform.dart  themis_tree_editor.dart
themis_gui/lib/core/model/: yaru_page_item.dart
themis_gui/lib/core/model/settings_data/: debug_data.dart  login_data.dart  settings_data.dart
themis_gui/lib/feature/config_page/cubit/: config_file_cubit.dart  themis_plugin_cubit.dart
themis_gui/lib/feature/config_page/screen/: plugins_page.dart
themis_gui/lib/feature/config_page/widgets/: themis_page_widgets.dart  themis_subui_widgets.dart  themis_widget.dart  themis_widget_abstract.dart
themis_gui/lib/feature/settings/cubit/: settings_data.dart
themis_gui/lib/feature/settings/screen/: about_settings.dart  client_settings.dart  install_plugin_settings.dart  settings_screen.dart
themis_gui/lib/feature/settings/widgets/: connection.dart  exit_confirmation.dart  login.dart  select_plugin_file.dart  show_test_button.dart
themis_gui/linux/: CMakeLists.txt
themis_gui/linux/flutter/: generated_plugins.cmake
themis_gui/linux/runner/: my_application.cc
themis_gui/macos/Flutter/: GeneratedPluginRegistrant.swift
themis_gui/macos/Runner.xcodeproj/: project.pbxproj
themis_gui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
themis_gui/macos/Runner/Configs/: AppInfo.xcconfig
themis_gui/test/: widget_test.dart
themis_gui/web/: index.html  manifest.json
themis_gui/windows/: CMakeLists.txt
themis_gui/windows/runner/: Runner.rc  main.cpp
themis_ui_lib/: pubspec.yaml
themis_ui_lib/lib/: themis_ui_lib.dart
themis_ui_lib/lib/src/misc/: extensions.dart
themis_ui_lib/lib/src/model/: client_data.dart
themis_ui_lib/lib/src/model/plugin_data/: backup_data.dart  config_data.dart  config_file_data.dart  themis_instance_brief.dart  themis_plugin_data.dart
themis_ui_lib/lib/src/model/themis_item/: themis_item.dart  themis_item_abstract.dart
themis_ui_lib/lib/src/service/: demo_item.dart  themis_client.dart
themis_ui_lib/test/: themis_ui_lib_test.dart
